# ts-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml
specs/: mission.md  roadmap.md  tech-stack.md
specs/2026-05-02-phase-3-clap-cli/: plan.md  requirements.md  validation.md
specs/2026-05-08-phase-5-relative-timestamps/: plan.md  requirements.md  validation.md
specs/2026-05-08-phase-6-incremental-timestamps/: requirements.md  validation.md
src/: lib.rs  main.rs
